--- a/src/GUI/fHome.form
+++ b/src/GUI/fHome.form
@@ -292,6 +292,7 @@
               <Events>
                 <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonKiemKeMouseEntered"/>
                 <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonKiemKeMouseExited"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonKiemKeActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButtonXuatKho">
